--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,27 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.FAIL_ON_PROJECT_REPOS)
+    repositories {
+        google()
+        mavenCentral()
+        maven {
+            url 'https://api.mapbox.com/downloads/v2/releases/maven'
+            authentication {
+                basic(BasicAuthentication)
+            }
+            credentials {
+                // Do not change the username below.
+                // This should always be `mapbox` (not your username).
+                username = "mapbox"
+                // Use the secret token you stored in gradle.properties as the password
+                password = "sk.eyJ1Ijoid3N1cHBpZ2VyIiwiYSI6ImNsMWJjazB0czAxeXEzanA4ZjFkeXB2dWEifQ.UITaEw7VgfSo_rP5EiXfPg"
+            }
+        }
+    }
+}
+
+
 rootProject.name = "EasyTeamUp"
 include ':app'
