--- a/app/build.gradle
+++ b/app/build.gradle
@@ -32,6 +32,7 @@ android {
 
 dependencies {
     implementation 'com.mapbox.maps:android:10.4.0'
+    implementation "com.mapbox.search:mapbox-search-android-ui:1.0.0-beta.28"
     implementation 'androidx.appcompat:appcompat:1.4.1'
     implementation 'com.google.android.material:material:1.5.0'
     implementation 'androidx.constraintlayout:constraintlayout:2.1.3'
